# Projeto-Cadastro

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
