[tool.poetry]
name = "cadastro"
version = "0.1.0"
description = ""
authors = ["Denisnolive <denisnolive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
